nav styled as sticky, no longer hides content behind

--- a/webdock-frontend/src/global-styling/Global.scss
+++ b/webdock-frontend/src/global-styling/Global.scss
@@ -24,7 +24,7 @@ main {
 }
 
 .wrap {
-	padding: 80px 20px 0 20px;
+	padding: 10px 20px;
 
 	@media screen and (min-width: v.$desktop-screen) {
 		max-width: 1200px;
