--- a/webdock-frontend/src/layout/navigation/Navigation.scss
+++ b/webdock-frontend/src/layout/navigation/Navigation.scss
@@ -3,7 +3,8 @@
 
 nav {
   background-color: white;
-  position: fixed;
+  // position: fixed;
+  position: sticky;
   height: 70px;
   width: 100%;
   display: flex;
